Use new intrinsic content height when computing min-height: min-content

Instead of using the cached intrinsic content height, we should use
the newly provided one, because that one is not out of date.

BUG=606423

Review-Url: https://codereview.chromium.org/1971053003
Cr-Commit-Position: refs/heads/master@{#393385}

Former-commit-id: ed528b2c5a2eef209222118fc34b7d9e325c9939